--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <header>
             <div class="Center">
                 <img src="./img/Valdemi.jpg"img>
-        
             </div>
            <h1>Valdemi Souza</h1>
            <h2>Professor de Matemática</h2>
@@ -58,7 +57,10 @@
             <p>Youtube</p>
             <a href="https://www.instagram.com/valdemi_001?utm_source=qr&igsh=ODloZWZjbXo4MDd2" target="_blank" rel="noopener noreferrer">
                 <img src="./img/instrgam.png"img>
-                <p>Instragam</p>
+                <p>Instrgam</p>
+                <a href="https://cmspweb.ip.tv/" target="_blank" rel="noopener noreferrer">
+                    <img src="./img/cmsp.png"img>
+                    <p>CmspWeb</p>
         </footer>
 
     </div>
